# FaceDeploy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.sh
core/: amface.cpp  amface.h  centerFace.cpp  centerFace.h  config.h  cp2tform.cpp  mtcnn.cpp  mtcnn.h
test/: benchmark.md  test_detect.cpp  test_time.cpp  test_verify.cpp
